# Compiladores

./: README.md
trabalho-pratico-1-mateuseluiz-main/: README.md  lang.cabal
trabalho-pratico-1-mateuseluiz-main/app/: Main.hs  program.lang
trabalho-pratico-1-mateuseluiz-main/enunciado/: assignment01.md
trabalho-pratico-1-mateuseluiz-main/report-template/: report.tex
trabalho-pratico-1-mateuseluiz-main/test/: Main.hs
trabalho-pratico-2-mateuseluiz-main/: README.md
trabalho-pratico-2-mateuseluiz-main/enunciado/: assignment02.md
trabalho-pratico-2-mateuseluiz-main/report-template/: ref.bib  report.tex
trabalho-pratico-2-mateuseluiz-main/tp2/: lang.cabal
trabalho-pratico-2-mateuseluiz-main/tp2/app/: Main.hs
trabalho-pratico-2-mateuseluiz-main/tp2/src/Lang/Frontend/Lexer/: Lexer.x
trabalho-pratico-2-mateuseluiz-main/tp2/src/Lang/Frontend/Parser/: Parser.hs  Parser.y
trabalho-pratico-2-mateuseluiz-main/tp2/src/Lang/Interpreter/: Interpreter.hs
trabalho-pratico-2-mateuseluiz-main/tp2/src/Lang/Syntax/: Syntax.hs
trabalho-pratico-2-mateuseluiz-main/tp2/test/Cases/: bubblesort.lang  fib.lang  stack.lang  tree.lang
trabalho-pratico-3-mateuseluiz-main/: README.md
trabalho-pratico-3-mateuseluiz-main/enunciado/: assignment03.md
trabalho-pratico-3-mateuseluiz-main/report-template/: report.tex
trabalho-pratico-3-mateuseluiz-main/tp3/: lang.cabal
trabalho-pratico-3-mateuseluiz-main/tp3/app/: Main.hs
trabalho-pratico-3-mateuseluiz-main/tp3/test/: Main.hs
trabalho-pratico-3-mateuseluiz-main/tp3/test/Cases/: fat.lang  stack.lang
(+6 files in other folders)
