cabal-version:      3.0
name:               lang
version:            0.1.0.0

author:             Mateus Souza
maintainer:         mateus.maximo@aluno.ufop.edu.br

category:           Language
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Lang.Frontend.Lexer.Lexer
        Lang.Frontend.Parser.Parser
        Lang.Syntax.Syntax
        Lang.Interpreter.Interpreter
    build-depends:
        base ^>=4.18.2.1,
        array
    build-tool-depends:
        alex:alex
    hs-source-dirs:
        src
    default-language: Haskell2010

executable lang-exe
    import:           warnings
    hs-source-dirs:    app
    main-is:           Main.hs
    build-depends:
        base ^>=4.18.2.1,
        lang,
        directory,
        filepath
    default-language:  Haskell2010

test-suite lang-test
    import:           warnings
    default-language: Haskell2010
    other-modules:
    type:             exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        lang,
        array,
        tasty,
        tasty-hunit,
        text ^>=2.0.2
